# fast-borsh

./: Cargo.toml
fastborsh/: Cargo.toml
fastborsh-core/: Cargo.toml
fastborsh-core/src/: lib.rs
fastborsh-derive/: Cargo.toml
fastborsh-derive/src/: lib.rs  macros.rs
fastborsh/benches/: borsh.rs
fastborsh/src/: lib.rs
fastborsh/tests/: serialize.rs
